# sonar-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: clippy.md  code-review.md  coverage.md  duplications.md  fix-clippy.md  fix-coverage.md  fix-duplications.md  fix-issues.md  fix-tests.md  hotspots.md  issues.md  sonar-scan.md  tests.md  triage.md
.claude/commands/: code-review.md  quality-fix.md  quality-sweep.md  report.md  scan.md
scripts/: docker-scan.sh  scan.sh
src/: client.rs  config.rs  coverage.rs  helpers.rs  main.rs  output.rs  scanner.rs  types.rs
src/commands/: auth.rs  coverage.rs  duplications.rs  health.rs  history.rs  hotspots.rs  issues.rs  measures.rs  mod.rs  projects.rs  quality_gate.rs  rules.rs  scan.rs  source.rs  wait.rs
tests/: cli.rs
xtask/: Cargo.toml
xtask/src/: clippy.rs  coverage.rs  git.rs  main.rs  scan.rs  setup.rs  test_failures.rs  triage.rs
