[package]
name = "sonar-cli"
version = "0.3.2"
edition = "2021"
description = "Standalone CLI for SonarQube — query issues, quality gates, metrics, coverage, and more"
license = "MIT"

[[bin]]
name = "sonar-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
toml = "0.8"

[dev-dependencies]
wiremock = "0.6"
serial_test = "3"
assert_cmd = "2"
predicates = "3"
